--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2021,3 +2021,28 @@ ul.resource-search-options {
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(233, 102, 102, 0.6);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(233, 102, 102, 0.6);
 }
+
+#resetZoomBtn {
+    width: 28px;
+    text-align: center;
+    padding: 8px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    box-shadow: 0 1px 0 rgba(111, 111, 111, 0.5);
+    background-color: #FFF;
+    float: right;
+    right: 11px;
+    top: -120px;
+    color: #666;
+}
+
+#resetZoomBtn:hover {
+    background-color :#EEE;
+    cursor:pointer;
+    color: #353535;
+}
+
+#resetZoomBtn::before {
+    margin-left: -1px;
+}
