--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2362,6 +2362,7 @@
             color:"#DDD",
             zoom: 3,
             streetViewControl: false,
+            center: {lat: 41.850033, lng: -87.6500523}, // Default center
             mapTypeControl: true,
             mapTypeControlOptions: {
                 style: google.maps.MapTypeControlStyle.DROPDOWN_MENU,
