--- a/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
+++ b/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
@@ -137,9 +137,7 @@
 
     $(document).ready(function(){
 
-         $('.label-file-name').each( //iterate
-                 function()
-                 {
+         $('.label-file-name').each(function() {
                      var filename = $(this).text()
                      var extension = filename.substring(filename.length-4, filename.length)
                      if (extension == ".shp" || extension == ".shx" || extension == ".dbf")
@@ -147,15 +145,15 @@
                          var tag_id = $(this).parent().parent().next().children().find("span[title='Delete']").attr('data-target')
                          var tag_id2 = tag_id.substring(1, tag_id.length)
                          $("#" + tag_id2).children().find("div[class='modal-body']").html(del_msg_shp_shx_dbf)
-                     }//if
+                     } // if
                      else if (extension == ".prj")
-                     {l
+                     {
                          var tag_id = $(this).parent().parent().next().children().find("span[title='Delete']").attr('data-target')
                          var tag_id2 = tag_id.substring(1, tag_id.length)
                          $("#" + tag_id2).children().find("div[class='modal-body']").html(del_msg_prj)
-                     }
-                 }//function
-         )//each
+                     } // else
+                 } // function
+         ) //each
     })
 </script>
 
