--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -111,14 +111,18 @@
     {% endif %}
 {% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-multiselect.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "css/model_program.css" %}" />
+{% endblock %}
+
 {% block extra_js %}
     {{ block.super }}
+    <script src="{% static "js/bootstrap-multiselect.js"%}"></script>
     <script src="{% static "js/model_program.js"%}"></script>
 {% endblock %}
 
 
-{% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% static "css/model_program.css" %}" />
-{% endblock %}
+
 
 
