modified model program css to fix window resizing issues [#632]

--- a/hs_model_program/static/css/model_program.css
+++ b/hs_model_program/static/css/model_program.css
@@ -74,15 +74,15 @@ table{
 }
 
 .div-multi-select{
-    width:100%;
+    max-width:400px;
 }
 .btn-group{
-    width: 50%;
+    width: 100%;
 }
 .multiselect{
     width: 100%;
     text-align: right;
 }
-/*.dropdown-menu{*/
-
-/*}*/
+.input-sm{
+    max-width:550px;
+}
