--- a/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
+++ b/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
@@ -4,119 +4,127 @@
 {% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}
 
 {% block extended_metadata %}
-        <div class="row">
-            <div class="col-md-12">
-                <div>
-                {# Add the view mode html code below for resource extended meta tab #}
-                {% if extended_metadata_exists %}
-                     {# Add the geometry information meta #}
-                    <h4 ><strong>Geometry Information:</strong></h4>
-                    {% if geometry_information %}
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
+    <style>
+        .hr-separator {
+            margin-top: 0px;
+            margin-bottom: 2px;
+        }
+        .field-table {
+            width:100%;
+        }
+    </style>
 
-                        {% if geometry_information.geometryType %}
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Geometry Type:</strong></div>
-                                <div class="col-sm-8">{{ geometry_information.geometryType }}</div>
-                            </div>
-                        {% endif %}
-
-                        {% if geometry_information.featureCount %}
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Feature Count:</strong></div>
-                                <div class="col-sm-8">{{ geometry_information.featureCount }}</div>
-                            </div>
-                        {% endif %}
-                    {% else %}
-                        <p>Geometry information is not provided.</p>
-                    {% endif %}
-
-                     {# Add the original coverage meta #}
-                    <h4 ><strong>Spatial Reference:</strong></h4>
-                    {% if original_coverage %}
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
-                        {% if original_coverage.projection_string %}
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Coordinate Reference System:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.projection_name }}</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Datum:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.datum }}</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Unit:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.unit }}</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Coordinate String:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.projection_string }}</div>
-                            </div>
-                        {% endif %}
+    <div class="row">
+        <div class="col-md-12">
+            <div>
+            {# Add the view mode html code below for resource extended meta tab #}
+            {% if extended_metadata_exists %}
+                 {# Add the geometry information meta #}
+                <h4><strong>Geometry Information:</strong></h4>
+                {% if geometry_information %}
+                    <hr class="hr-separator">
+                    {% if geometry_information.geometryType %}
                         <div class="row">
-                            <div class="col-sm-4"><strong>Extent:</strong></div>
+                            <div class="col-sm-4"><strong>Geometry Type:</strong></div>
+                            <div class="col-sm-8">{{ geometry_information.geometryType }}</div>
                         </div>
-
-                        {% if original_coverage.northlimit %}
-                            <div class="row">
-                                <div class="col-sm-4" style="text-indent:40px"><strong>North:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.northlimit }}</div>
-                            </div>
-                        {% endif %}
-
-                        {% if original_coverage.eastlimit %}
-                            <div class="row">
-                                <div class="col-sm-4" style="text-indent:40px"><strong>East:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.eastlimit }}</div>
-                            </div>
-                        {% endif %}
-
-                        {% if original_coverage.southlimit %}
-                            <div class="row">
-                                <div class="col-sm-4" style="text-indent:40px"><strong>South:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.southlimit }}</div>
-                            </div>
-                        {% endif %}
-
-                        {% if original_coverage.westlimit %}
-                            <div class="row">
-                                <div class="col-sm-4" style="text-indent:40px"><strong>West:</strong></div>
-                                <div class="col-sm-8">{{ original_coverage.westlimit }}</div>
-                            </div>
-                        {% endif %}
-                        </hr>
-
-                    {% else %}
-                        <p>Metadata information is not provided. </p>
                     {% endif %}
 
-                    {# Add the Field Information meta #}
-                    <h4 ><strong>Field Information:</strong></h4>
-                    {% if field_information %}
-                    <hr style="margin-top: 0px;margin-bottom: 2px">
-                             <table style="width:100%">
-                                 <tr class="row">
-                                     <th >Name</th><th>Type</th> <th>Width</th> <th>Precision</th>
-                                 </tr>
-                                {% for field_item in field_information %}
-                                    <tr class="row">
-                                        <td>{{ field_item.fieldName }}</td>
-                                        <td>{{ field_item.fieldType }}</td>
-                                        <td>{{ field_item.fieldWidth }}</td>
-                                        <td>{{ field_item.fieldPrecision }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </table>
-                    {% else %}
-                        <p> Metadata information is not provided.</p>
-                    {% endif %} {# variable section end #}
+                    {% if geometry_information.featureCount %}
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Feature Count:</strong></div>
+                            <div class="col-sm-8">{{ geometry_information.featureCount }}</div>
+                        </div>
+                    {% endif %}
+                {% else %}
+                    <p>Geometry information is not provided.</p>
+                {% endif %}
 
-                {% endif %}{# extended meta section end #}
+                 {# Add the original coverage meta #}
+                <h4><strong>Spatial Reference:</strong></h4>
+                {% if original_coverage %}
+                    <hr class="hr-separator">
+                    {% if original_coverage.projection_string %}
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Coordinate Reference System:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.projection_name }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Datum:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.datum }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Unit:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.unit }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Coordinate String:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.projection_string }}</div>
+                        </div>
+                    {% endif %}
+                    <div class="row">
+                        <div class="col-sm-4"><strong>Extent:</strong></div>
+                    </div>
 
-                {# Add the view mode html code for resource extended meta tababove #}
-                </div>
+                    {% if original_coverage.northlimit %}
+                        <div class="row">
+                            <div class="col-sm-4" style="text-indent:40px"><strong>North:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.northlimit }}</div>
+                        </div>
+                    {% endif %}
+
+                    {% if original_coverage.eastlimit %}
+                        <div class="row">
+                            <div class="col-sm-4" style="text-indent:40px"><strong>East:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.eastlimit }}</div>
+                        </div>
+                    {% endif %}
+
+                    {% if original_coverage.southlimit %}
+                        <div class="row">
+                            <div class="col-sm-4" style="text-indent:40px"><strong>South:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.southlimit }}</div>
+                        </div>
+                    {% endif %}
+
+                    {% if original_coverage.westlimit %}
+                        <div class="row">
+                            <div class="col-sm-4" style="text-indent:40px"><strong>West:</strong></div>
+                            <div class="col-sm-8">{{ original_coverage.westlimit }}</div>
+                        </div>
+                    {% endif %}
+                    </hr>
+
+                {% else %}
+                    <p>Metadata information is not provided.</p>
+                {% endif %}
+
+                {# Add the Field Information meta #}
+                <h4 ><strong>Field Information:</strong></h4>
+                {% if field_information %}
+                <hr class="hr-separator">
+                         <table class="field-table">
+                             <tr class="row">
+                                 <th >Name</th> <th>Type</th> <th>Width</th> <th>Precision</th>
+                             </tr>
+                            {% for field_item in field_information %}
+                                <tr class="row">
+                                    <td>{{ field_item.fieldName }}</td>
+                                    <td>{{ field_item.fieldType }}</td>
+                                    <td>{{ field_item.fieldWidth }}</td>
+                                    <td>{{ field_item.fieldPrecision }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                {% else %}
+                    <p> Metadata information is not provided.</p>
+                {% endif %} {# variable section end #}
+
+            {% endif %}{# extended meta section end #}
+            {# Add the view mode html code for resource extended meta tababove #}
             </div>
         </div>
+    </div>
 
     {#  Add the code of extended section on the landing page below #}
     {% block extended_section %}
@@ -129,11 +137,11 @@
 {# put resource specific js below #}
 <script type="text/javascript">
 
-    del_msg_shp_shx_dbf = "<font color='red'>BE CAREFUL!</font> The 'shp', 'shx' and 'dbf' are three mandatory files." +
+    var del_msg_shp_shx_dbf = "<font color='red'>BE CAREFUL!</font> The 'shp', 'shx' and 'dbf' are three mandatory files." +
             "Missing of any of them will corrupt data integrity. So this operation is about to permanently " +
             "<font color='red'>DELETE ALL EXISTING FILES</font> of this resource! You may upload new shapefiles later."
 
-    del_msg_prj = "This operation is about to <font color='red'>REMOVE COORDINATE SYSTEM METADATA!</font>"
+    var del_msg_prj = "This operation is about to <font color='red'>REMOVE COORDINATE SYSTEM METADATA!</font>"
 
     $(document).ready(function(){
 
